feat(database): 添加 PostgreSQL 数据库支持并重构数据库连接池接口
- 新增 PostgreSQL 数据库支持选项到配置文件
- 添加 SqlDialect 抽象层以支持不同数据库方言
- 重构 ISQLConnectionPool 接口以支持数据库方言
- 修改 InGameProfileTableV3 使用新的数据库连接方式
- 在 .gitignore 中添加 docs/ 和 buildSrc/ 目录
- 升级 Java 版本兼容性从 21 到 25
- 添加 JUnit 测试依赖和配置
- 修复 Velocity 注入器中的 URL 处理安全问题
- 更新 bStats 统计模块的 URL 创建方式
- 优化 Velocity 加密响应处理逻辑
- 添加 PostgreSQL JDBC 驱动依赖